4 - Adicione à página um quadro de pixels, com 25 pixels. DONE

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 		<div class="color"></div>
 	</section>
 
+	<section>
+		<table id="pixel-board"></table>
+	</section>
+
 	<script type="text/javascript" src="script.js"></script>
 </body>
 
