--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <h1 id="title">Paleta de Cores</h1>
   <nav id="color-palette"></nav>
+  <button id="clear-board">Limpar</button>
   <section id="pixel-board"></section>
   <script src="script.js"></script>
 </body>
