--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <div class="color" id="orange"></div>
         </div>
     </div>
+    <div id="cofigPixelBord">
+        <input id="btnClear" type="button" value="Limpar">
+    </div>
 
     <div id="pixel-board"></div>
     
