initializing first palette color

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
         <h1 id="title"></h1>
     </header>
 
-    <section>
-        <div id="color-palette"></div>
-    </section>
+    <section id="color-palette"></section>
 
     <section id="pixel-board"></section>
 
