--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
             </div>
             <div class="color" id="corTres">
             </div>
-                       
-        </div>
-        <div id="botao">
+            <div id="botao">
                 <button id="clear-board">Limpar</button>
             </div> 
+            <input id="board-size" type="number" min="5" max="50" value="5"> 
+            <div>
+                <button id="generate-board">VQV</button>
+            </div>
+        </div>    
         <table id="pixel-board">
 
         </table>
