--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
     </section>
     <section>
-        <table border id="pixel-board">
+        <table  id="pixel-board">
             <tr id="linha-1">
 
             </tr>
