--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <h1 id="title">Paleta de Cores</h1> 
         <section id="color-palette" ></section>
         <section id= "pixel-board"></section>
-
-
+        <section id="btnClearPixels" ></section>
 
         <script src="script.js"></script>
     </main>
