--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         </div>
     </div>
     <div id="cofigPixelBord">
-        <input id="btnClear" type="button" value="Limpar">
+        <input id="clear-board" type="button" value="Limpar">
+
+        <input type="number" id="board-size" placeholder="5" min="1">
+        <input type="button" id="generate-board" value="VQV">
     </div>
 
     <div id="pixel-board"></div>
