--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <div id="three" class="color" ></div>
             <div id="four" class="color" ></div>
         </section>
+
+        <section id="pixel-board"></section>
+        <script src="./script.js"></script>
     </body>
 
 </html>
