--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       <div class="color"></div>
     </section>
 
+    <div class="button-container">
+      <button id="clear-board">Limpar</button>
+    </div>
+
     <section id="frame-section">
       <table id="pixel-board">
         <tr class="line">
