Adiciona exercicios do 8 ao 10

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <div class='color'></div>
     <div class='color'></div>
 </div>
-<table id="pixels-board">
-</table >
+<button id="generate-board">VQV</button><input type="number"  min="5" max="15" id="board-size" > 
+<table id="pixel-board"></table >
+<button id="clear-board">Limpar</button>
+
 <script src="script.js"></script>    
 </body>
 </html>
