--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
   <h1 id="title">Paleta de Cores</h1>
-
 <body>
     <section>
         <div id="color-palette">
@@ -16,7 +15,14 @@
             <div class="color" id="red"></div>
         </div>
 
+        <br>
+        <div id="pixel-board"></div>
+       
+
+        
+
     </section>
+    <script src="script.js"></script>
 </body>
 </head>
 </html>
