--- a/index.html
+++ b/index.html
@@ -1,64 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>    
-<!-- Metas -->
+<head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="author" content="RobsonCardozo">
-<title>Project Pixel Art</title>
-    
-<!-- Head links -->
+<title>Pixel Art's Project</title>
 <link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
 </head>
 
 <body>
     <h1 id='title'>Paleta de Cores</h1>
+    <main class='container'>
 
     <section id='color-palete'>
-        <div id='black' class='color'>&nbsp</div>
-        <div id='red' class='color'>&nbsp</div>
-        <div id='green' class='color'>&nbsp</div>
-        <div id='blue' class='color'>&nbsp</div>
+        <div id='black' class='color'></div>
+        <div id='red' class='color'></div>
+        <div id='green' class='color'></div>
+        <div id='blue' class='color'></div>
     </section>
 
-    <table id='pixel-board  '>
-        <tr>
-            <th class='pixel'>&nbsp</th>
-            <th class='pixel'>&nbsp</th>
-            <th class='pixel'>&nbsp</th>
-            <th class='pixel'>&nbsp</th>
-            <th class='pixel'>&nbsp</th>
-        </tr>
-        <tr>
-            <th class='pixel'>&nbsp</th>
-            <th class='pixel'>&nbsp</th>
-            <th class='pixel'>&nbsp</th>
-            <th class='pixel'>&nbsp</th>
-            <th class='pixel'>&nbsp</th>
-        </tr>
-        <tr>
-            <th class='pixel'>&nbsp</th>
-            <th class='pixel'>&nbsp</th>
-            <th class='pixel'>&nbsp</th>
-            <th class='pixel'>&nbsp</th>
-            <th class='pixel'>&nbsp</th>
-        </tr>
-        <tr>
-            <th class='pixel'>&nbsp</th>
-            <th class='pixel'>&nbsp</th>
-            <th class='pixel'>&nbsp</th>
-            <th class='pixel'>&nbsp</th>
-            <th class='pixel'>&nbsp</th>
-        </tr>
-        <tr>
-            <th class='pixel'>&nbsp</th>
-            <th class='pixel'>&nbsp</th>
-            <th class='pixel'>&nbsp</th>
-            <th class='pixel'>&nbsp</th>
-            <th class='pixel'>&nbsp</th>
-        </tr>
-    </table>
+    <section id='board'>
+        <table id='pixel-board  '>
+            <tr>
+                <th class='pixel'></th>
+                <th class='pixel'></th>
+                <th class='pixel'></th>
+                <th class='pixel'></th>
+                <th class='pixel'></th>
+            </tr>
+            <tr>
+                <th class='pixel'></th>
+                <th class='pixel'></th>
+                <th class='pixel'></th>
+                <th class='pixel'></th>
+                <th class='pixel'></th>
+            </tr>
+            <tr>
+                <th class='pixel'></th>
+                <th class='pixel'></th>
+                <th class='pixel'></th>
+                <th class='pixel'></th>
+                <th class='pixel'></th>
+            </tr>
+            <tr>
+                <th class='pixel'></th>
+                <th class='pixel'></th>
+                <th class='pixel'></th>
+                <th class='pixel'></th>
+                <th class='pixel'></th>
+            </tr>
+            <tr>
+                <th class='pixel'></th>
+                <th class='pixel'></th>
+                <th class='pixel'></th>
+                <th class='pixel'></th>
+                <th class='pixel'></th>
+            </tr>
+        </table>
+    </section>
+    </main>
 
 </body>
 
