--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="cofigPixelBord">
         <input id="clear-board" type="button" value="Limpar">
 
-        <input type="number" id="board-size" placeholder="5" min="1">
+        <input type="number" id="board-size" placeholder="5" min="1" max="50">
         <input type="button" id="generate-board" value="VQV">
     </div>
 
