7 - Clicar em uma das cores da paleta faz com que ela seja selecionada e utilizada para preencher os pixels no quadro.

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <div id='color-palette'>
         <span id='black' class='color selected'></span>
 
-        <label for="input-second">
+        <label>
             <span id='second-color' class='color'></span>
         </label>
 
-        <label for="input-third">
+        <label>
             <span id='third-color' class='color'></span>
         </label>
 
-        <label for="input-fourth">
+        <label>
             <span id='fourth-color' class='color'></span>
         </label>
     </div>
