--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
             </div>
             <div class="color" id="corTres">
             </div>
+            
+        </div>
+        <div id="opcoes">
             <div id="botao">
                 <button id="clear-board">Limpar</button>
             </div> 
-            <input id="board-size" type="number" min="5" max="50" value="5"> 
-            <div>
+             <input id="board-size" type="number" min="5" max="50"> 
+            <div id="entrada">
                 <button id="generate-board">VQV</button>
             </div>
         </div>    
