--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   </header>
   <body>
     <div id="color-palette">
-    <div id="color-palette1" class="color"></div>
-    <div id="color-palette2" class="color"></div>
-    <div id="color-palette3" class="color"></div>
-    <div id="color-palette4" class="color"></div>
+    <div class="color" id="black"></div>
+    <div class="color" id="green"></div>
+    <div class="color" id="blue"></div>
+    <div class="color" id="yellom"></div>
 </div>
     <script src="script.js"></script>
   </body>
