--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="color" id="blue"></div>
     </div>
   </div>
-  <input id="board-size" type="number" min="5" max="50" value="40">
+  <input id="board-size" type="number" min="1" value="40">
   <button id="generate-board">VQV</button>
   <br>
   <br>
