--- a/index.html
+++ b/index.html
@@ -3,64 +3,21 @@
 
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
-<meta name="author" content="RobsonCardozo">
+<meta name="autdor" content="RobsonCardozo">
 <title>Pixel Art's Project</title>
 <link rel="stylesheet" href="style.css">
-<script src="script.js"></script>
 </head>
 
 <body>
     <h1 id='title'>Paleta de Cores</h1>
-    <main class='container'>
-
     <section id='color-palete'>
-        <div id='black' class='color'></div>
-        <div id='red' class='color'></div>
-        <div id='green' class='color'></div>
-        <div id='blue' class='color'></div>
+        <button class='color-select'></button>
+        <button class='color'></button>
+        <button class='color'></button>
+        <button class='color'></button>
     </section>
 
-    <section id='board'>
-        <table id='pixel-board  '>
-            <tr>
-                <th class='pixel'></th>
-                <th class='pixel'></th>
-                <th class='pixel'></th>
-                <th class='pixel'></th>
-                <th class='pixel'></th>
-            </tr>
-            <tr>
-                <th class='pixel'></th>
-                <th class='pixel'></th>
-                <th class='pixel'></th>
-                <th class='pixel'></th>
-                <th class='pixel'></th>
-            </tr>
-            <tr>
-                <th class='pixel'></th>
-                <th class='pixel'></th>
-                <th class='pixel'></th>
-                <th class='pixel'></th>
-                <th class='pixel'></th>
-            </tr>
-            <tr>
-                <th class='pixel'></th>
-                <th class='pixel'></th>
-                <th class='pixel'></th>
-                <th class='pixel'></th>
-                <th class='pixel'></th>
-            </tr>
-            <tr>
-                <th class='pixel'></th>
-                <th class='pixel'></th>
-                <th class='pixel'></th>
-                <th class='pixel'></th>
-                <th class='pixel'></th>
-            </tr>
-        </table>
-    </section>
-    </main>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
