--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class='color'></div>
     <div class='color'></div>
 </div>
-<button id="generate-board">VQV</button><input type="number"  min="5" max="15" id="board-size" > 
+<button id="generate-board">VQV</button><input type="number"  id="board-size" > 
 <table id="pixel-board"></table >
 <button id="clear-board">Limpar</button>
 
