add botao clear

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <div id="paleta3" class="color"></div>
             <div id="paleta4" class="color"></div>
     </div>
+
+    <button id="clear-board">Limpar</button>
     
     <div id="pixel-board">
         <!-- <div class="pixel"></div> -->
