--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <li class="color"></li>
     </ul>
 
+    <button id="clear-board">Limpar</button>
+
     <table id="pixel-board">
         <tr>
             <td class="pixel"></td>
