--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="paleta-container">
         <ul id="color-palette"></ul>
     </div>
-
+    <div id="clear-board">Limpar</div>
     <div id="pixel-board"></div>
 
 
