Quesito 2 tentativa 2 com random

--- a/index.html
+++ b/index.html
@@ -9,22 +9,6 @@
   
 </head>
 <body>
-  <header>
-    <h1 id = title>"Paleta de Cores"</h1>
-  </header>
-  <main>
-    <section id = color-palette>
-      <span class = 'color' id = blue> --- </span>
-      <span class = 'color' id = pink> --- </span>
-      <span class = 'color' id = red> --- </span>
-      <span class = 'color' id = green> --- </span>
-
-    </section>
-    
-  </main>
-  <footer>
-
-  </footer>
-  <script src=""></script>
+  <script src="script.js"></script>
 </body>
 </html>
