--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 
 <body>
-    <h1 id='title'>Paleta de Cores</h1>
-    <section id='color-palete'>
-        <button class='color-select'></button>
-        <button class='color'></button>
-        <button class='color'></button>
-        <button class='color'></button>
-    </section>
+    <h1 id="title">Paleta de Cores</h1>
 
+    <nav id="color-palette"></nav>
+
+    <button id="clear-board">Limpar</button>
+
+    <section id="pixel-board"></section>
+    
     <script src="script.js"></script>
-</body>
+  </body>
 
 </html>
