--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         </div>
     </div>
     <div id="cofigPixelBord">
-        <input id="clear-board" type="button" value="Limpar">
+        <button id="clear-board" type="button">Limpar</button>
 
         <input type="number" id="board-size" placeholder="5" min="1" max="50">
-        <input type="button" id="generate-board" value="VQV">
+        <button type="button" id="generate-board">VQV</button>
     </div>
 
     <div id="pixel-board"></div>
