--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="color" id="secondColor"></div>
         <div class="color" id="thirdColor"></div>
         <div class="color" id="fourthColor"></div>
+        <div class="color" id="fifthColor"></div>
     </div>
 
     <div id="pixel-board">
