8 - Clicar em um pixel dentro do quadro após selecionar uma cor na paleta faz com que o pixel seja preenchido com a cor selecionada.

--- a/index.html
+++ b/index.html
@@ -13,19 +13,14 @@
     <h1 id='title'>Paleta de Cores</h1>
 
     <div id='color-palette'>
-        <span id='black' class='color selected'></span>
+        <span id='primary-color' data-color="#000000" class='color selected'></span>
 
-        <label>
-            <span id='second-color' class='color'></span>
-        </label>
+        <span id='second-color' data-color="#ed4e23" class='color'></span>
+        
+        <span id='third-color' data-color="#3970fe" class='color'></span>
 
-        <label>
-            <span id='third-color' class='color'></span>
-        </label>
-
-        <label>
-            <span id='fourth-color' class='color'></span>
-        </label>
+        <span id='fourth-color' data-color="#438104" class='color'></span>
+    
     </div>
 
     <input id="input-second" class="input-colors" type="color" value="#ed4e23">
