Adicionando quadro de pixels

--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
   <div id="color-palette">
   </div>
 
-  <ul id="pixel-board">
-    <li>teste</li>
-  </ul>
+  <div id="pixel-board">
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+    </div>
   <script src="script.js"></script>
 </body>
 </html>
