--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
-<meta name="autdor" content="RobsonCardozo">
+<meta name="author" content="RobsonCardozo">
 <title>Pixel Art's Project</title>
 <link rel="stylesheet" href="style.css">
 </head>
