--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
     <!-- Requisito 02 e 03 Ok-->
     <div id="color-palette">
-        <div class="color" id="black"></div>
+        <div class="color selected" id="black"></div>
         <div class="color" id="greenyellow"></div>
         <div class="color" id="blue"></div>
         <div class="color" id="orangered"></div>
     </div>
 
-    <!-- Requisito 04 -->
+    <!-- Requisito 04 e 05 Ok -->
     <table id="pixel-board">
         <tr>
             <td class="pixel"></td>
