--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
     --><div id = "paletteThree" class = "color"></div><!--
     --><div id = "paletteFour" class = "color"></div>
   </section>
+  <input id= "board-size" type="number" min="1" max="50">
+
+  <button id="generate-board">VQV</button>
   <div id = 'buttonDiv'></div>
-  <div id = "pixel-board">
+
+  <div id="board-container">
+    <div id = "pixel-board"></div>
   </div>
   <script src = "script.js"></script>
 </body>
