--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
 </head>
 <body>
   <h1 id="title">Paleta de Cores</h1>
-  <section id="color-palette">
-    <div class="color selected"></div>
-    <div class="color"></div>
-    <div class="color"></div>
-    <div class="color"></div>
-  </section>
+  <section id="color-palette"></section>
+  <section id="pixel-board"></section>
   <script src="script.js"></script>
 </body>
 </html>
