terminando o quadro de pixels

--- a/index.html
+++ b/index.html
@@ -15,5 +15,42 @@
     <div class="caixa color" id="thirdbox"> </div>
     <div class="caixa color" id="fourthbox"> </div>
  </div>
+ <br>
+ <br>
+ <div id="pixel-board">
+    <div class="caixa1 pixel colorpixel"> </div>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <br>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <br>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <br>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <br>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <div class="caixa1 pixel colorpixel"> </div>
+    <div class="caixa1 pixel colorpixel"> </div>
+ </div>
+
+
+
+
 </body>
 </html>
