Colocando a class selected

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   </header>
   <section>
     <div id="color-palette">
-      <div id="black" class="color selected"></div>
-      <div id="blue" class="color"></div>
-      <div id="red" class="color"></div>
-      <div id="green" class="color"></div>
+      <div id="blackBox" class="color selected"></div>
+      <div id="blueBox" class="color"></div>
+      <div id="redBox" class="color"></div>
+      <div id="greenBox" class="color"></div>
     </div>
   </section>
   <br>
