Quesito 2 tentativa 3 random nao passa no teste :(

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
   
 </head>
 <body>
+  <header>
+    <h1 id = title>Paleta de Cores</h1>
+  </header>
+  <section>
+    <div id = color-palette>
+      <span class = color id = black>black</span>
+      <span class = color id = blue>blue</span>
+      <span class = color id = yellow>yellow</span>
+      <span class = color id = red>red</span>
+    </div>
+  </section>
+  <section>
+
+  </section>
+
   <script src="script.js"></script>
 </body>
 </html>
