--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="color" id="green"></div>
         <div class="color" id="blue"></div>
       </section>
-
+      <button class="button-reset" id="clear-board">Limpar</button>
       <section id="pixels">
         <table id="pixel-board">
           <tr>
