project updates and fixes 1.1

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <!-- Projeto Pixels Art -->
+    
     <h1 id="title">Paleta de Cores</h1>
 
     <nav id="color-palette"></nav>
