new try on task six

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <section>
         <div id="color-palette">
-            <div class="color" class="selected" id="black"></div>
+            <div class="color" id="black"></div>
             <div class="color" id="blue"></div>
             <div class="color" id="green"></div>
             <div class="color" id="red"></div>
