tentando resolver ex 6

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 id="title"> Paleta de Cores  </h1>
  <div id="color-palette">
-    <div class="caixa color" id="firstbox"> </div>
+    <div class="caixa color selected" id="firstbox"> </div>
     <div class="caixa color" id="secondbox"> </div>
     <div class="caixa color" id="thirdbox"> </div>
     <div class="caixa color" id="fourthbox"> </div>
@@ -51,6 +51,6 @@
 
 
 
-
+<script src="script.js"></script>
 </body>
 </html>
