--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
 <body>
     <h1 id="title">Paleta de Cores</h1>
     <div id="color-palette">
-        <div class="color"></div>
+        <div class="selected color"></div>
         <div class="color"></div>
         <div class="color"></div>
         <div class="color"></div>
     </div>
-    <div id="pixel-board"></div>
-    
+    <div id="pixel-board">
+        <div class="lines"></div>
+        <div class="lines"></div>
+        <div class="lines"></div>
+        <div class="lines"></div>
+        <div class="lines"></div>
+    </div>        
 </body>
 <script src="script.js"></script>
 </html>
