--- a/index.html
+++ b/index.html
@@ -17,7 +17,20 @@
         <div class="color" id="green"></div>
         <div class="color" id="blue"></div>
       </section>
-      <button class="button-reset" id="clear-board">Limpar</button>
+      <section class="button-container">
+        <button class="button-reset" id="clear-board">Limpar</button>
+        <input
+          type="number"
+          id="board-size"
+          class="imput"
+          size="16"
+          placeholder="Digite o tam da board"
+          min="1"
+          max="50"
+        />
+        <button id="generate-board" class="button-generate">VQV</button>
+      </section>
+
       <section id="pixels">
         <table id="pixel-board">
           <tr>
