--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   </header>
   <section>
     <div id = color-palette>
-      <span class = color id = black>black</span>
-      <span class = color id = blue>blue</span>
-      <span class = color id = yellow>yellow</span>
-      <span class = color id = red>red</span>
+      <span class = 'color selected' id = black></span>
+      <span class = color id = blue></span>
+      <span class = color id = yellow></span>
+      <span class = color id = red></span>
     </div>
   </section>
   <section id = pixel-board>
@@ -29,32 +29,32 @@
       <span class = pixel id = '04'></span>
     </div>
     <div>
-      <span class = pixel id = '10'>.</span>
-      <span class = pixel id = '11'>.</span>
-      <span class = pixel id = '12'>.</span>
-      <span class = pixel id = '13'>.</span>
-      <span class = pixel id = '14'>.</span>
+      <span class = pixel id = '10'></span>
+      <span class = pixel id = '11'></span>
+      <span class = pixel id = '12'></span>
+      <span class = pixel id = '13'></span>
+      <span class = pixel id = '14'></span>
     </div>
     <div>
-      <span class = pixel id = '20'>.</span>
-      <span class = pixel id = '21'>.</span>
-      <span class = pixel id = '22'>.</span>
-      <span class = pixel id = '23'>.</span>
-      <span class = pixel id = '24'>.</span>
+      <span class = pixel id = '20'></span>
+      <span class = pixel id = '21'></span>
+      <span class = pixel id = '22'></span>
+      <span class = pixel id = '23'></span>
+      <span class = pixel id = '24'></span>
     </div>
     <div>
-      <span class = pixel id = '30'>.</span>
-      <span class = pixel id = '31'>.</span>
-      <span class = pixel id = '32'>.</span>
-      <span class = pixel id = '33'>.</span>
-      <span class = pixel id = '34'>.</span>
+      <span class = pixel id = '30'></span>
+      <span class = pixel id = '31'></span>
+      <span class = pixel id = '32'></span>
+      <span class = pixel id = '33'></span>
+      <span class = pixel id = '34'></span>
     </div>
     <div>
-      <span class = pixel id = '40'>.</span>
-      <span class = pixel id = '41'>.</span>
-      <span class = pixel id = '42'>.</span>
-      <span class = pixel id = '43'>.</span>
-      <span class = pixel id = '44'>.</span>
+      <span class = pixel id = '40'></span>
+      <span class = pixel id = '41'></span>
+      <span class = pixel id = '42'></span>
+      <span class = pixel id = '43'></span>
+      <span class = pixel id = '44'></span>
     </div>
   </section>
   <script src="script.js"></script>
