--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
   <header>
     <h1 id = title>Paleta de Cores</h1>
   </header>
-
+  <section>
+    <div id = color-palette>
+      <span class = color id = black></span>
+      <span class = color id = blue></span>
+      <span class = color id = yellow></span>
+      <span class = color id = red></span>
+    </div>
+  </section>
 
 
   <script src="script.js"></script>
