--- a/index.html
+++ b/index.html
@@ -9,15 +9,10 @@
 </head>
 <body>
   <h1 id="title">Paleta de Cores</h1>
-  <div id="table">
-    <div id="color-palette" class="tr">
-      <div id="color1" class="color td"></div>
-      <div id="color2" class="color td"></div>
-      <div id="color3" class="color td"></div>
-      <div id="color4" class="color td"></div>
-    </div>
-    <div id="pixel-board" class="tr"></div>
-  </div>
+
+  <div id="color-palette"></div>
+  <div id="pixel-board"></div>
+  
   <script src="script.js"></script>
 </body>
 </html>
