--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
   <section>
     <div id = color-palette>
-      <span class = color id = black></span>
+      <span class = 'color selected' id = black></span>
       <span class = color id = blue></span>
       <span class = color id = yellow></span>
       <span class = color id = red></span>
