--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <div class="color" id="blue"></div>
         <div class="color" id="green"></div>
       </section>
+      <section id="pixel-board">
+      </section>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
