--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <div id="redBox" class="color"></div>
       <div id="greenBox" class="color"></div>
     </div>
+    <br>
+    <button id="clear-board">Limpar</button>
   </section>
   <br>
   <section>
