--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <input
           type="number"
           id="board-size"
-          class="imput"
+          class="input"
           size="16"
           placeholder="Digite o tam da board"
         />
