--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
           class="input"
           size="16"
           placeholder="Digite o tam da board"
+          min="1"
+          max="50"
         />
         <button id="generate-board" class="button-generate">VQV</button>
       </section>
