--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <span class = pixel id = '44'></span>
     </div>
   </section>
+  <footer><button id = clear-board>Limpar</button></footer>
   <script src="script.js"></script>
 </body>
 </html>
