--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <span class = color id = red></span>
     </div>
   </section>
+  <button id = clear-board>Limpar</button>
   <section id = pixel-board>
     <div>
       <span class = pixel id = '00'></span>
@@ -57,7 +58,7 @@
       <span class = pixel id = '44'></span>
     </div>
   </section>
-  <footer><button id = clear-board>Limpar</button></footer>
+  <footer></footer>
   <script src="script.js"></script>
 </body>
 </html>
