--- a/index.html
+++ b/index.html
@@ -16,43 +16,7 @@
     <div class="color" id="yellow"></dv>
   </section>
 
- <section id="pixel-board">
-   <div class="tr">
-     <div class="pixel"></div>
-     <div class="pixel"></div>
-     <div class="pixel"></div>
-     <div class="pixel"></div>
-     <div class="pixel"></div>
-   </div>
-   <div class="tr">
-     <div class="pixel"></div>
-     <div class="pixel"></div>
-     <div class="pixel"></div>
-     <div class="pixel"></div>
-     <div class="pixel"></div>
-   </div>
-   <div class="tr">
-     <div class="pixel"></div>
-     <div class="pixel"></div>
-     <div class="pixel"></div>
-     <div class="pixel"></div>
-     <div class="pixel"></div>
-   </div>
-   <div class="tr">
-     <div class="pixel"></div>
-     <div class="pixel"></div>
-     <div class="pixel"></div>
-     <div class="pixel"></div>
-     <div class="pixel"></div>
-   </div>
-   <div class="tr">
-     <div class="pixel"></div>
-     <div class="pixel"></div>
-     <div class="pixel"></div>
-     <div class="pixel"></div>
-     <div class="pixel"></div>
-   </div>  
- </section>
+ <section id="pixel-board"></section>
 
   <script src="script.js"></script>
 </body>
