--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
 <h1 id="title">Paleta de Cores</h1>
 <div id="color-palette">
-    <div class='color selected'></div>
+    <div class='color'></div>
     <div class='color'></div>
     <div class='color'></div>
     <div class='color'></div>
 </div>
-<button id="generate-board">VQV</button><input type="number" min="1" id="board-size" > 
+<input type="number" min="1" id="board-size" > 
+<button id="generate-board">VQV</button>
 <button id="clear-board">Limpar</button>
 <table id="pixel-board"></table >
 
