--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <div id="color-palette">
-        <div class="color" id="black"></div>
+        <div class="color" class="select" id="black"></div>
         <div class="color" id="red"></div>
         <div class="color" id="green"></div>
         <div class="color" id="blue"></div>
