--- a/index.html
+++ b/index.html
@@ -13,14 +13,28 @@
 </header>
 <!-- // primeira cor selec ionada black -->
  <section id="color-palette">
-    <div class="color selecionada"></div>
+    <div class="color selected"></div>
     <div class="color"></div>
     <div class="color"></div>
     <div class="color"></div>
   </section>
 
-  <button id="clear-board">Limpar</button>
-  <!-- //cor inicial do pixil branco -->
+
+
+  <section id="configure">
+    <div id="botao">
+        <button id="clear-board">Limpar</button>
+    </div>
+
+     <input id="board-size" type="number" min="5" max="50">
+
+     <div id="entrada">
+        <button id="generate-board">VQV</button>
+    </div>
+  </section>
+
+
+
 
   <div id="pixel-board"> </div>
 
