--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <h1 id="title">Paleta de Cores</h1>
 
   <div id="color-palette"></div>
+  <div id="div-botao">
+    <button type="submit" id="clear-board">Limpar</button>
+  </div>
 
   <div id="pixel-board"></div>
 
