--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
     <button id="clear-board">Limpar</button>
 
+    <form action="">
+        <input id="board-size" type="number" placeholder="Nº Pixels" min="1" max="50">
+        <button id="generate-board">VQV</button>
+    </form>
+
     <table id="pixel-board">
         <tr>
             <td class="pixel"></td>
