--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <li class="color"></li>
         <li class="color"></li>
     </ul>
-    <section id="pixel-board"></section>
+    <table id="pixel-board">
+        
+    </table>
     <script src="script.js"></script>
 </body>
 </html>
