--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <div class="color" id="yellow"></dv>
   </section>
 
- <section id="pixel-board"></section>
+  <button id="clear-board">Limpar</button>
+
+ <section id="pixel-board"></section>    
+ 
+
 
   <script src="script.js"></script>
 </body>
