updates and script cleaning

--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
 <body>
     <!-- Projeto Pixels Art -->
     
+    <!-- Título em h2 -->
     <h1 id="title">Paleta de Cores</h1>
 
+    <!-- Paletas de Cores - Navegação -->
     <nav id="color-palette"></nav>
 
-    <button id="clear-board">Limpar</button>
+    <!-- Botão Limpar -->
+    <button id="clear-button">Limpar</button>
 
+    <!-- Seção Pixel Board -->
     <section id="pixel-board"></section>
     
+    <!-- Scripts JS -->
     <script src="script.js"></script>
   </body>
 
