--- a/index.html
+++ b/index.html
@@ -23,13 +23,10 @@
         <button id="clear-board">Limpar</button>
     </div>
 
-    <div id="paleta">
+    <div>
         <table id="pixel-board">
             <td class="pixel"></td>
-            <td class="pixel"></td>
-            <td class="pixel"></td>
-            <td class="pixel"></td>
-            <td class="pixel"></td>
+            <tr class="pixel"></tr>
         </table>
     </div>
    
