updates and script cleaning 1.2

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav id="color-palette"></nav>
 
     <!-- Botão Limpar -->
-    <button id="clear-button">Limpar</button>
+    <button id="clear-board">Limpar</button>
 
     <!-- Seção Pixel Board -->
     <section id="pixel-board"></section>
