--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <h1 id = 'title'>Paleta de Cores</h1>
   <section id="color-palette">
   </section>
+  <section id='pixels-board'> 
+    <section classe='quadro'></section>
+    <section classe='quadro'></section>
+    <section classe='quadro'></section>
+    <section classe='quadro'></section>
+    <section classe='quadro'></section>
+  </section>
   <script src="script.js"></script>
 </body>
 </html>
