--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="script.js"></script>
+  <link rel="stylesheet" href="style.css">  
   <title>Document</title>
 </head>
 <body>
@@ -17,11 +16,8 @@
     <div class="color" id="fourth-color"></div>
   </div>
   <div id="pixel-board">
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
+  
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
