--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </header>
 
         <section id="color-palette">
-            <div id="one" class="color" ></div>
+            <div id="one" class="selected" ></div>
             <div id="two" class="color" ></div>
             <div id="three" class="color" ></div>
             <div id="four" class="color" ></div>
