Refatorando funçao de criaçao do quadro para utilizar estrutura de tabela

--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
 
     <button id="clear-board" class="button">Limpar</button>
 
-    <section id="pixel-board"></section>
+    <table id="pixel-board"></table>
   </body>
 </html>
