--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"> 
-    <script src="script.js" type="text/javascript"></script>
     <title>Projeto Pixels Art</title>
 </head>
 <body>
@@ -18,7 +17,7 @@
         <div class="color" id="color4"></div>
     </div>
 
-    <input type="button" class="clear-board" value="Limpar">
+    <input type="button" id="clear-board" value="Limpar">
 
     <div id="pixel-board">
         <div class="pixel"></div>
@@ -48,6 +47,6 @@
         <div class="pixel"></div>
     </div>
 
-
+    <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
