--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       <ul id="color-palette">
         
       </ul>
+
+      <ul id="pixel-board">
+        
+      </ul>
     </section>
     <script src="script.js"></script>
 
