--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <!-- Paletas de Cores - Navegação -->
     <nav id="color-palette"></nav>
 
+    <div class="set-size">
+      <input id="board-size" type="number" min="1"/>
+      <button id="generate-board">VQV</button>
+    </div>
+
     <!-- Botão Limpar -->
     <button id="clear-board">Limpar</button>
 
