--- a/index.html
+++ b/index.html
@@ -20,47 +20,52 @@
       <div class="color"></div>
     </section>
 
-    <div class="button-container">
+    <div class="buttons-container">
+      <p class="paragraph">Tamanho do quadro de pixels:</p>
+      <input id="board-size" type="text" placeholder="5 até 50">
+      <button id="generate-board">VQV</button>
       <button id="clear-board">Limpar</button>
     </div>
 
     <section id="frame-section">
       <table id="pixel-board">
-        <tr class="line">
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-        </tr>
-        <tr class="line">
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-        </tr>
-        <tr class="line">
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-        </tr>
-        <tr class="line">
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-        </tr>
-        <tr class="line">
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-        </tr>
+        <tbody id="table-body">
+          <tr class="line">
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+          </tr>
+          <tr class="line">
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+          </tr>
+          <tr class="line">
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+          </tr>
+          <tr class="line">
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+          </tr>
+          <tr class="line">
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+            <td class="pixel"></td>
+          </tr>
+        </tbody>
       </table>
     </section>
 
