--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Paleta de Cores</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
-    <div id="color-palette">
-        <table>
+    <div>
+        <table id="color-palette">
             <tr id="black" class="color">
                 <td></td>
             </tr>
@@ -24,6 +24,46 @@
             </tr>
             <tr id="green" class="color">
                 <td></td>
+            </tr>
+        </table>
+    </div>
+    <button id="clear-board">Limpar</button>
+    <div>
+        <table id="pixel-board">
+            <tr>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+            </tr>
+            <tr>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+            </tr>
+            <tr>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+            </tr>
+            <tr>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+            </tr>
+            <tr>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
             </tr>
         </table>
     </div>
