Ajustando funcao de criar quadro

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   </div>
 
   <div id="pixel-board">
+    <!-- <div class="line"></div>
     <div class="line"></div>
     <div class="line"></div>
     <div class="line"></div>
-    <div class="line"></div>
-    <div class="line"></div>
+    <div class="line"></div> -->
     </div>
   <script src="script.js"></script>
 </body>
