ajuste no id  pixels

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1 id = 'title'>Paleta de Cores</h1>
   <section id="color-palette">
   </section>
-  <section id='pixels-board'> 
+  <section id='pixel-board'> 
   </section>
   <script src="script.js"></script>
 </body>
