inserindo paleta de cores distintas

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   </header>
   <body>
     <div id="color-palette">
-    <div class="color" id="black"></div>
-    <div class="color" id="green"></div>
-    <div class="color" id="blue"></div>
-    <div class="color" id="yellom"></div>
+      <div class="color" id="blue"></div>
+      <div class="color" id="red"></div>
+      <div class="color" id="green"></div>
+      <div class="color" id="black"></div>
+      
 </div>
     <script src="script.js"></script>
   </body>
