--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<h1 id="title">Paleta de Cores</h1>
 
 	<section id="color-palette">
-		<div class="selected" class="color"></div>
+		<div class="color"></div>
 		<div class="color"></div>
 		<div class="color"></div>
 		<div class="color"></div>
