refatoraçao parte1 / requisito 9 - botao de reset

--- a/index.html
+++ b/index.html
@@ -9,18 +9,10 @@
   </head>
   <body>
     <h1 id="title">Paleta de Cores</h1>
-
-    <div id="color-palette">
-      <div id="box1" class="color"></div>
-      <div id="box2" class="color"></div>
-      <div id="box3" class="color"></div>
-      <div id="box4" class="color"></div>
-    </div>
-
-    <div id="pixel-board">
-      
-    </div>
-
+    <table id="color-palette"></table>
+    <button id="clear-board">Limpar</button>
+    <table id="pixel-board"></table>
     <script src="script.js"></script>
+
   </body>
 </html>
