--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <div class="buttons-container">
         <p class="paragraph">Tamanho do quadro de pixels:</p>
-        <input id="board-size" type="number" placeholder="5 até 50">
+        <input id="board-size" type="number" min="1" pattern='\d+' placeholder="5 até 50">
         <button id="generate-board">VQV</button>
         <button id="clear-board">Limpar</button>
       </div>
