--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   </section>
   <section>
     <button type="button" id="clear-board"><span>Limpar</span></button>
+    <input id="board-size" type="number" min="1">
+    <button id="generate-board">VQV</button>
   </section>
   <div id="pixel-board"></div>
   <script src="script.js"></script>
