--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </header>
     <section>
         <div id='color-palette'></div>
+        <button id="clear-board">Limpar</button>
         <div id="pixel-board"></div>
     </section>
     <script src="script.js"></script>
