--- a/index.html
+++ b/index.html
@@ -2,16 +2,26 @@
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width , initial-scale=1.0 ">
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 ">
+  <title></title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
+  <header>
     <h1 id="title">Paleta de Cores</h1>
-    <script>
-    </script>
+  </header>
+  <table id="color-palette">
+    <tr>
+      <td class="color"></td>
+      <td class="color"></td>
+      <td class="color"></td>
+      <td class="color"></td>
+      <td class="color"></td>
+    </tr>
+  </table>
+  <script src="script.js"></script>
 </body>
 
 </html>
