--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </form>
 
     <table id="pixel-board">
-        <tr>
+        <tr id="teste">
             <td class="pixel"></td>
             <td class="pixel"></td>
             <td class="pixel"></td>
