--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>  
   <div id='color-palette'></div>
   <div id="btn-div">
-    <button id='clear-board'>Clear</button>
+    <button id='clear-board'>Limpar</button>
   </div> 
   <table id='pixel-board'></table>
    
