--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <h1 id="title">Paleta de Cores</h1>
 
-   
+
 
     <section id="color-palette">
         <div id="blackBox" class="color black selected"> </div>
@@ -24,8 +24,14 @@
 
     <button id="clear-board" onclick="clearBoard()"> Limpar</button>
 
+    <label for="name">Tamanho da Board:</label>
+    <input type="number" id="board-size" min="5" max="50" >
+    <button id="generate-board" onclick="creatPixelBoard()"> Criar Board</button>
+
+
     <section id="pixel-board"></section>
 
+   
     <script src="/script.js"></script>
 </body>
 
