--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <main>
     <div id="color-palette">
       <div class="color color1"></div>
-      <div class="color color2"></div>
+      <div class="color color2 red"></div>
       <div class="color color3"></div>
       <div class="color color4"></div>
     </div>
