Arrumando a posiçao da div do botao limpar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </header>
 
     <div id="color-palette"></div>
+    <div id="clear-board"></div>
     <div id="pixel-board"></div>
             
     <script src="script.js"></script>
