--- a/index.html
+++ b/index.html
@@ -18,9 +18,47 @@
       <td class="color"></td>
       <td class="color"></td>
       <td class="color"></td>
-
     </tr>
   </table>
+  </br>
+  <table id="pixel-board">
+    <tr>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+    </tr>
+    <tr>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+    </tr>
+    <tr>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+    </tr>
+    <tr>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+    </tr>
+    <tr>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+    </tr>
+  </table>
+
   <script src="script.js"></script>
 </body>
 
