--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   <div id="color-palette"></div>
   <div id="div-botao">
     <button type="submit" id="clear-board">Limpar</button>
+
+
+    <input type="number" id="board-size" name="tamanho-quadro" min="0">
+    <button id="generate-board" type="submit">VQV</button>
   </div>
 
   <div id="pixel-board"></div>
