Começando a criar todos os elememtos atravez da DOM

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="title">Paleta de Cores</h1>
+   <!--  <h1 id="title">Paleta de Cores</h1>
 
     <div>
         <table id="color-palette">
@@ -21,15 +21,7 @@
 
     <div id="botão"> 
         <button id="clear-board">Limpar</button>
-    </div>
-
-    <div>
-        <table id="pixel-board">
-            <td class="pixel"></td>
-            <tr class="pixel"></tr>
-        </table>
-    </div>
-   
+    </div> -->
     
     <script src="script.js"></script>
 </body>
