--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <div id="color-palette"></div>
     <div id="clear-board"></div>
+    <input id="board-size" type="number">
+    <button id="generate-board"></button>
     <div id="pixel-board"></div>
             
     <script src="script.js"></script>
