--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     </header>
     <section>
         <div id='color-palette'></div>
+
         <button id="clear-board">Limpar</button>
+        <br>
+        <input type="number" id="board-size" value="5" min="5" max="50"><button id="generate-board">VQV</button>
+
         <div id="pixel-board"></div>
     </section>
     <script src="script.js"></script>
