--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
             <div id="three" class="color" ></div>
             <div id="four" class="color" ></div>
         </section>
-
-        <section id="pixel-board"></section>
+        <div id="button">
+            <button id="clean">Press me</button>
+        </div>
+        <table id="pixel-board"></table>
         <script src="./script.js"></script>
     </body>
 
