--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
 		<div class="color"></div>
 	</section>
 
-	<section> 
+	<section>
 		<button id="clear-board">Limpar</button>
+
+		<input type="number" id="board-size" min="5" max="50">
+		<button id="generate-board">VQV</button>
 	</section>
 
 	<section id="pixel-board"></section>
