--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <button id="clear-board">Limpar</button>
         <br>
-        <input type="number" id="board-size" value="5" min="5" max="50"><button id="generate-board">VQV</button>
+        <input type="number" id="board-size" min="1" max="50"><button id="generate-board">VQV</button>
 
         <div id="pixel-board"></div>
     </section>
