--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <h1 id="title">Paleta de Cores</h1>
+  <section class="main">
+    <h1 id="title">Paleta de Cores</h1>
 
   <div id="color-palette" class="palette-table">
     <div class="tr">
@@ -18,6 +19,9 @@
       <div class="color td"></div>
     </div>
   </div>
+
+  <div id="pixel-board"></div>
+  </section>
 
   <script src="/script.js"></script>
 </body>
