--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Projeto Pixels Art</title>
 </head>
 <body>
-  <h1 id="title">Paleta de cores</h1>
+  <h1 id="title">Paleta de Cores</h1>
   <div id="color-palette">
     <div class="color"></div>
     <div class="color"></div>
