--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <div class="color"></div>
   </div>
 
+  <div id="button-align">
+    <button id="clear-board">Limpar</button>
+  </div>
+
   <table id="pixel-board">
     <tr>
         <td class="pixel"></td>
