--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <ul id="color-palette"></ul>
     </div>
     <h5 id="clear-board">Limpar</h5>
+    <input id="board-size">
+    <h5 id="generate-board">VQV</h5>
     <div id="pixel-board"></div>
 
 
