--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </tr>
     </table>
   </section>
-  <section id="sectionButton"></section>
+  <section id="painelControle"></section>
   <section id="pixel-board">    
   </section>
   <script src="script.js"></script>
