--- a/index.html
+++ b/index.html
@@ -22,35 +22,35 @@
   </table>
   </br>
   <table id="pixel-board">
-    <tr>
+    <tr class="linhatabela">
       <td class="pixel"></td>
       <td class="pixel"></td>
       <td class="pixel"></td>
       <td class="pixel"></td>
       <td class="pixel"></td>
     </tr>
-    <tr>
+    <tr class="linhatabela">
       <td class="pixel"></td>
       <td class="pixel"></td>
       <td class="pixel"></td>
       <td class="pixel"></td>
       <td class="pixel"></td>
     </tr>
-    <tr>
+    <tr class="linhatabela">
       <td class="pixel"></td>
       <td class="pixel"></td>
       <td class="pixel"></td>
       <td class="pixel"></td>
       <td class="pixel"></td>
     </tr>
-    <tr>
+    <tr class="linhatabela">
       <td class="pixel"></td>
       <td class="pixel"></td>
       <td class="pixel"></td>
       <td class="pixel"></td>
       <td class="pixel"></td>
     </tr>
-    <tr>
+    <tr class="linhatabela">
       <td class="pixel"></td>
       <td class="pixel"></td>
       <td class="pixel"></td>
