Atlerações no botão

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <section>
     <div id="pixel-board">
       <div>
-        <div id="" class="pixel"></div>
+        <div id="box1" class="pixel"></div>
         <div id="" class="pixel"></div>
         <div id="" class="pixel"></div>
         <div id="" class="pixel"></div>
