--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div id="color-palette"></div>
     <div id="clear-board"></div>
-    <input id="board-size" type="number">
+    <input id="board-size" type="number" min="1" max="50">
     <button id="generate-board"></button>
     <div id="pixel-board"></div>
             
