--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   </header>
   <div id="color-palette"> 
   </div>
-
+  <button id="clear-board"></button>
   <div id="pixel-board"> 
   </div>
+
 
   <script src="script.js"></script>
 </body>
