correçao do item 4

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div id="color-palette" class="palette-table">
     <div class="tr">
-      <div class="color td"></div>
+      <div class="color td selected"></div>
       <div class="color td"></div>
       <div class="color td"></div>
       <div class="color td"></div>
