--- a/index.html
+++ b/index.html
@@ -12,52 +12,52 @@
   <header>
     <h1 id="title">Paleta de Cores</h1>
   </header>
-  <table id="color-palette">
-    <tr>
-      <td class="color"></td>
-      <td class="color"></td>
-      <td class="color"></td>
-      <td class="color"></td>
-    </tr>
-  </table>
+  <div id="color-palette">
+
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+
+  </div>
   </br>
-  <table id="pixel-board">
-    <tr class="linhatabela">
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-    </tr>
-    <tr class="linhatabela">
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-    </tr>
-    <tr class="linhatabela">
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-    </tr>
-    <tr class="linhatabela">
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-    </tr>
-    <tr class="linhatabela">
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-      <td class="pixel"></td>
-    </tr>
-  </table>
+  <div id="pixel-board">
+    <div class="linha1">
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+    </div>
+    <div class="linha2">
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+    </div>
+    <div class="linha3">
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+    </div>
+    <div class="linha4">
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+    </div>
+    <div class="linha5">
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
