--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <!--  <h1 id="title">Paleta de Cores</h1>
+    <h1 id="title">Paleta de Cores</h1>
 
     <div>
         <table id="color-palette">
@@ -19,9 +19,54 @@
         </table>
     </div>
 
-    <div id="botão"> 
+    <div id="botão">
         <button id="clear-board">Limpar</button>
-    </div> -->
+    </div>
+
+    <div>
+        <table id="pixel-board">
+            <tr class="pixel">
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+            </tr>
+
+            <tr class="pixel">
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+            </tr>
+
+            <tr class="pixel">
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+            </tr>
+
+            <tr class="pixel">
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+            </tr>
+
+            <tr class="pixel">
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+                <td class="pixel"></td>
+            </tr>
+        </table>
+    </div>
+
     
     <script src="script.js"></script>
 </body>
