--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div id="botao">
                 <button id="clear-board">Limpar</button>
             </div> 
-             <input id="board-size" type="number" min="1" max="50"> 
+             <input id="board-size" type="number"> 
             <div id="entrada">
                 <button id="generate-board">VQV</button>
             </div>
