adicionado lado a lado paleta

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
       <div class="color" id="red"></div>
       <div class="color" id="green"></div>
       <div class="color" id="black"></div>
+       
+    </div>
+  <div id="pixel-boarpd">
+    <div class="pixel"></div>
+     </div>
       
-</div>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </body>
 </html>
