--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="script.js">
-    <title>Document</title>
+    <title>Exercicio Pixels Arts</title>
 </head>
 <body>
     <h1 id="title">Paleta de Cores</h1>
+
+    <nav id="color-palette">
+        <span class="color">paleta 1</span>
+        <span class="color">paleta 2</span>
+        <span class="color">paleta 3</span>
+        <span class="color">paleta 4</span>
+    </nav>
+
 </body>
 </html>
