--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1 id="title">Paleta de Cores</h1>
 
     <section id="color-palette">
-    <div id="black" class="color selected" ></div>
-    <div id="red" class="color"></div>
-    <div id="blue" class="color"></div>
-    <div id="green" class="color"></div>
+    <div  class="color black selected" ></div>
+    <div  class="color red"></div>
+    <div  class="color blue"></div>
+    <div  class="color green"></div>
     </section>
 
     <table id="pixel-board">
