--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
       <ul id="color-palette">
         
       </ul>
+    </section>
+
+    <section>
 
       <ul id="pixel-board">
-        
+
       </ul>
     </section>
+   
     <script src="script.js"></script>
 
     <footer>
