--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <table id="color-palette">
         <tr>
-            <td class="color" id="preto"></td>
+            <td class="color selected" id="preto"></td>
         
             <td class="color" id="azul"></td>
         
