D9 criado e funcionando no pc, criado com a funçao addEventListener e for para inserir white nos pixels 'back-ground

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
         <header>
             <h1 id="title">Paleta de Cores</h1>
         </header>
-        <section id="color-palette" onclick="">
+        <section id="color-palette">
             <div class="color selected" id="preto"></div>
             <div class="color" id="vermelho"></div>
             <div class="color" id="azul"></div>
             <div class="color" id="verde"></div>
         </section>
+        <button id="clear-board">Limpar</button>
         <table id="pixel-board">
             <tr>
                 <td class="pixel" aria-selected="">1</td>
