--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <h1 id="title"> Paleta de Cores </h1>
     <section id="color-palette">
-        <div class="color selected" id="black"></div>
-        <div class="color" id="red"></div>
-        <div class="color" id="blue"></div>
-        <div class="color" id="green"></div>
+        <div class="color preto selected" id="black"></div>
+        <div class="color vermelho" id="red"></div>
+        <div class="color azul" id="blue"></div>
+        <div class="color verde" id="green"></div>
     </section>
     <section id="pixel-board">
         <div class="pixel align cor"></div>
@@ -48,6 +48,7 @@
         <div class="pixel align cor"></div>
         <div class="pixel align cor"></div>
     </section>
+    
     <script src="script.js"></script>
 </body>
 
