--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="script.js">
     <title>Project Pixels Art</title>
 </head>
 <body>
     <h1 id="title">Paleta de Cores</h1>
-    <div id="color-palette" >
+    <div id="color-palette">
         <div class="color" id="colorBlack"></div>
         <div class="color" id="color1"></div>
         <div class="color" id="color2"></div>
         <div class="color" id="color3"></div>
     </div>
+
+  <div id="container-pixels"></div>
+ 
+<script src="./script.js" type="text/javascript"></script>
 </body>
 </html>
