--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </header>
 <!-- // primeira cor selec ionada black -->
  <section id="color-palette">
-    <div class="color selected"></div>
-    <div class="color"></div>
-    <div class="color"></div>
-    <div class="color"></div>
+    <div class="color black selected"></div>
+    <div class="color red"></div>
+    <div class="color purple"></div>
+    <div class="color green"></div>
   </section>
 
 
