--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         3. Adicione a cor preta como a primeira cor da paleta de cores. -->
     <div id="color-palette">
         <!--"https://www.maujor.com/tutorial/sintaxetut.php" A CSS 2 permite declarar mais de uma classe, desde que o nome das classes sejam separados por um espaço. -->
-        <div class="color select" id="black"></div>
+        <div class="color selected" id="black"></div>
         <div class="color" id="red"></div>
         <div class="color" id="green"></div>
         <div class="color" id="blue"></div>
