--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
   <h1 id="title">Paleta de Cores</h1>
   <div id="color-palette">
-    <div class="color"></div>
-    <div class="color"></div>
-    <div class="color"></div>
-    <div class="color"></div>
+    <div class="color preto"></div>
+    <div class="color azul"></div>
+    <div class="color amarelo"></div>
+    <div class="color verde"></div>
   </div>
 
   <div id="pixel-board"></div>
