--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -19,6 +19,7 @@
     <div class="color green"></div>
   </div>
 
+  <section id="pixel-board"></section>
 
 
   <script src="script.js"></script>
