--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <section id="pixel-board"></section>
 
+    <button id="btn-reset">Limpar Board</button>
+
     <script src="script.js"></script>
 </body>
 </html>
