--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css"  href="style.css">
   <title>Project Pixels Art</title>
 </head>
-<body>
+<body id='baba'>
   <h1 id = 'title'>Paleta de Cores</h1>
   <section id="color-palette">
   </section>
