--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         <div class="pixel align cor"></div>
         <div class="pixel align cor"></div>
     </section>
+    <br>
+    <input type="button" value="Limpar" id="clear-board">
     
     <script src="script.js"></script>
 </body>
