desafio verificando erros

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,16 +9,14 @@
 </head>
 <body>
   <h1 id="title">Paleta de Cores</h1>
-  <section id="secao">
-    <table id="color-palette">    
-      <td class="color c1" ></td>
-      <td class="color c2" ></td>
-      <td class="color c3" ></td>
-      <td class="color c4" ></td>    
-    </table>
+  <section id="color-palette">
+    <div class="color c1"></div>
+    <div class="color c2"></div>
+    <div class="color c3"></div>
+    <div class="color c4"></div>
   </section>
   <section id="pixel-board"></section>
-  <button type="button" onclick="criaPixels()">Nova tabela</button>
+  
   <script type="text/javaScript" src="script.js"></script>  
 </body>
 </html>
