--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="pixel align cor"></div>
     </section>
     <br>
-    <input type="button" value="Limpar" id="clear-board">
+    <button id="clear-board">Limpar</button> >
     
     <script src="script.js"></script>
 </body>
