--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="color azul" id="blue"></div>
         <div class="color verde" id="green"></div>
     </section>
+    <input type="button" value="Limpar" id="clear-board">
     <section id="pixel-board">
         <div class="pixel align cor"></div>
         <div class="pixel align cor"></div>
@@ -49,7 +50,7 @@
         <div class="pixel align cor"></div>
     </section>
     <br>
-    <button id="clear-board">Limpar</button> >
+    
     
     <script src="script.js"></script>
 </body>
