ajuste do pixel css

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
       <div class="color" id="red"></div>
        
     </div>
-  <div id="pixel-boarpd">
-    <div class="pixel" ></div>
-     </div>
+  <div id="pixel-board">
+  </div>
       
     <script src="script.js" defer></script>
   </body>
