--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     <!-- Requisito 01 - Ok -->
     <h1 id="title">Paleta de Cores</h1>
 
-    <!-- Requisito 02 e 03 Ok-->
+     <!-- Requisito 02 e 03 Ok-->
     <div id="color-palette">
         <div class="color selected" id="black"></div>
         <div class="color" id="greenyellow"></div>
         <div class="color" id="blue"></div>
         <div class="color" id="orangered"></div>
     </div>
+
+    <button onclick="clearBoard()" id="clear-board">Limpar</button>
 
     <!-- Requisito 04 e 05 Ok -->
     <table id="pixel-board">
