--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 id="title">Paleta de Cores</h1>
 
     <section id="color-palette">
-        
+
     <div  class="color black selected" ></div>
     <div  class="color red"></div>
     <div  class="color blue"></div>
@@ -21,6 +21,8 @@
     <table id="pixel-board">
 
     </table>
+
+    <button id="clear-board">Limpar</button>
     <script src="script.js"></script>
 </body>
 </html>
