button and input to resize board

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
     <section id="color-palette"></section>
 
-    <button id="clear-board">Limpar</button>
+    <section id="buttons-container">
+        <button id="clear-board" class="btn">Limpar</button>
+        <button id="generate-board" class="btn">VQV</button>
+        <input type="text" id="board-size" class="btn">
+    </section>
 
     <section id="pixel-board"></section>
 
