adicionado a funçao click para selecionar a cor (item 7)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 id="title">Paleta de Cores</h1>
 
   <div id="color-palette" class="palette-table">
-    <div class="tr">
+    <div id="palette-line" class="tr">
       <div class="color td selected"></div>
       <div class="color td"></div>
       <div class="color td"></div>
