--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
-    <section>
+    <section id= "pai-button">
         <div id="color-palette">
 
         </div>
